# newworld

./: .gitignore  Anchor.toml  Cargo.toml  commitlint.config.js  package.json
.github/actions/anchor-publish/: action.yaml
.github/actions/assert-changed-files/: action.yaml  script.js
.github/actions/aws-env-var/: action.yaml
.github/actions/build-and-upload/: action.yaml
.github/actions/fetch-pr-labels/: action.yaml
.github/actions/fetch-pr-review-comments/: action.yaml  script.js
.github/actions/fetch-pr-version/: action.yaml
.github/actions/get-pr-for-commit/: action.yaml
.github/actions/install-solana/: action.yaml
.github/actions/list-changed-files/: action.yaml  script.js
.github/actions/make-version-changes/: action.yaml  fuckyou.js  script.js
.github/actions/map-labels-to-version/: action.yaml
.github/actions/map-pr-review-to-version/: action.yaml  script.js
.github/actions/parse-version-command/: action.yaml
.github/actions/publish-to-crates/: action.yaml
.github/actions/publish-to-npm/: action.yaml
.github/actions/publish-version-changes/: action.yaml  index.js
.github/actions/setup-anchor/: action.yaml
.github/actions/setup-aws-env/: action.yaml
.github/actions/setup-solana/: action.yaml
.github/actions/update-cargo-version/: action.yaml  script.js
.github/workflows/: main.yml  pr-comment.yml  publish-on-pr-merge.yml  pull-request.yml
.husky/: pre-commit  pre-push
app/: index.ts
newworld/js/: LICENSE  package.json
newworld/program/: Cargo.toml
newworld/program/src/: lib.rs
tests/: newworld.ts
(+4 files in other folders)
