[package]
name = "jshiohaha-newworld-test"
version = "0.2.4"
edition = "2021"
description = "Created with Anchor"
authors = [ "Jacob Shiohira <dev@jacobshiohira.com>" ]
repository = "https://github.com/jshiohaha/newworld"
license = "AGPL-3.0"

[lib]
crate-type = [ "cdylib", "lib" ]

[features]
no-entrypoint = [ ]
no-idl = [ ]
no-log-ix-name = [ ]
cpi = [ "no-entrypoint" ]
default = [ ]

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"
